// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategoryAndTemplate rendering render with error 1`] = `
<Fragment>
  <Title
    headingLevel="h2"
  >
    Category and Template
  </Title>
  <Text
    component="p"
  >
    All fields are required.
  </Text>
  <Form>
    <SelectField
      fieldId="job_category"
      isDisabled={false}
      label="Job category"
      options={Array []}
      placeholderText=""
      setValue={[Function]}
      value={null}
    />
    <GroupedSelectField
      fieldId="job_template"
      groups={Array []}
      isDisabled={true}
      label="Job template"
      placeholderText="Error"
      selected={null}
      setSelected={[MockFunction]}
    />
    <Alert
      title="Errors:"
      variant="danger"
    >
      <span>
        Templates list failed with:
         
        I have an error
      </span>
    </Alert>
  </Form>
</Fragment>
`;

exports[`CategoryAndTemplate rendering renders with props 1`] = `
<Fragment>
  <Title
    headingLevel="h2"
  >
    Category and Template
  </Title>
  <Text
    component="p"
  >
    All fields are required.
  </Text>
  <Form>
    <SelectField
      fieldId="job_category"
      isDisabled={false}
      label="Job category"
      options={
        Array [
          "Commands",
          "Ansible Playbook",
          "Ansible Galaxy",
          "Ansible Roles Installation",
        ]
      }
      placeholderText=""
      setValue={[Function]}
      value="I am a category"
    />
    <GroupedSelectField
      fieldId="job_template"
      groups={
        Array [
          Object {
            "groupLabel": "SSH",
            "options": Array [
              Object {
                "label": "ab Run Command - SSH Default clone",
                "value": 190,
              },
            ],
          },
          Object {
            "groupLabel": "Ansible",
            "options": Array [
              Object {
                "label": "Ansible Roles - Ansible Default",
                "value": 168,
              },
              Object {
                "label": "Ansible Roles - Install from git",
                "value": 170,
              },
            ],
          },
        ]
      }
      isDisabled={false}
      label="Job template"
      placeholderText=""
      selected="ab Run Command - SSH Default clone"
      setSelected={[MockFunction]}
    />
  </Form>
</Fragment>
`;
